--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.10.6",
     "q": "^1.4.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
@@ -20,8 +21,9 @@
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "node-notifier": "^4.2.1",
+    "react-weekday-picker": "^1.0.2",
+    "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^2.4.0",
-    "reactify": "^1.1.0"
+    "watchify": "^2.4.0"
   }
 }
