--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "q": "^1.4.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "reflux": "^0.2.12"
+    "reflux": "^0.2.12",
+    "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
